MGNLDEMO-120 Fix jumping tourcards on chrome with backface-visibility:hidden css attribute.

--- a/community/magnolia-travel-demo/src/main/resources/travel-demo-theme/css/travels-magnolia.css
+++ b/community/magnolia-travel-demo/src/main/resources/travel-demo-theme/css/travels-magnolia.css
@@ -1470,6 +1470,7 @@ max-width: 500px) {
     width: 100%;
     object-fit: cover;
     object-position: 50% 50%;
+    backface-visibility: hidden;
 }
 
 #mgnlhp {
